--- a/pom.xml
+++ b/pom.xml
@@ -458,6 +458,12 @@
         <artifactId>cassandra-unit</artifactId>
         <version>${cassandraunit.version}</version>
         <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>com.datastax.cassandra</groupId>
