--- a/mongodb-plugins/pom.xml
+++ b/mongodb-plugins/pom.xml
@@ -66,6 +66,16 @@
       <groupId>org.mongodb.mongo-hadoop</groupId>
       <artifactId>mongo-hadoop-core</artifactId>
       <version>1.4.0</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
