--- a/cassandra-plugins/pom.xml
+++ b/cassandra-plugins/pom.xml
@@ -69,6 +69,10 @@
       <artifactId>hadoop-mapreduce-client-core</artifactId>
       <exclusions>
         <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+        <exclusion>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
         </exclusion>
