--- a/.gitmodules
+++ b/.gitmodules
@@ -27,10 +27,10 @@
 	path = kafka-plugins
 	url = ../../data-integrations/kafka-plugins
 	branch = develop
-#[submodule "amazon-s3-plugins"]
-#	path = amazon-s3-plugins
-#	url = ../../data-integrations/amazon-s3-plugins
-#	branch = develop
+[submodule "amazon-s3-plugins"]
+	path = amazon-s3-plugins
+	url = ../../data-integrations/amazon-s3-plugins
+	branch = develop
 [submodule "yandex-s3-plugins"]
 	path = yandex-s3-plugins
 	url = ../../buzila/amazon-s3-plugins
